fix text contrast

--- a/templated-caminar/assets/css/main.css
+++ b/templated-caminar/assets/css/main.css
@@ -1629,7 +1629,7 @@
 
 	body {
 		background-color: lightgray;
-		color: rgba(0, 0, 0, 0.5);
+		color: rgb(66, 65, 65);
 	}
 
 	body, input, select, textarea {
@@ -2635,7 +2635,7 @@
 	}
 
 	header p {
-		color: #bbb;
+		color: black;
 	}
 
 /*Spotlight */
@@ -2690,7 +2690,7 @@
 
 		.spotlight.alt {
 			background: #1e1f23;
-			color: rgba(255, 255, 255, 0.25);
+			color: lightgray;
 			display: -moz-flex;
 			display: -webkit-flex;
 			display: -ms-flex;
@@ -2718,7 +2718,7 @@
 			}
 
 			.spotlight.alt h3 {
-				color: #FFF;
+				color: lightgray;
 			}
 
 			.spotlight.alt .image {
@@ -3133,7 +3133,7 @@
 				}
 
 			.wrapper.style2 header p {
-				color: rgba(255, 255, 255, 0.25);
+				color: #FFF;
 			}
 
 		@media screen and (max-width: 1280px) {
@@ -3165,7 +3165,7 @@
 	}
 
 		#footer a {
-			color: rgba(255, 255, 255, 0.75);
+			color: rgba(255, 255, 255, 0.85);
 		}
 
 			#footer a:hover {
@@ -3173,7 +3173,7 @@
 			}
 
 		#footer .copyright {
-			color: #bbb;
+			color: #FFF;
 			font-size: 0.9rem;
 			/*margin: 0 0 2rem 0;*/
 			padding: 0 1rem;
